--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
 <head>
 <title>Neon Guess Game</title>
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
 
 <style>
 :root {
@@ -28,11 +29,12 @@ body {
 }
 
 .game-container {
-    margin-top: 50px;
+    margin-top: 30px;
     background: var(--card-bg);
-    padding: 30px;
+    padding: 20px;
     border-radius: 15px;
-    width: 400px;
+    width: 90%;
+    max-width: 420px;
     margin-left: auto;
     margin-right: auto;
     box-shadow: 0 0 25px var(--neon);
@@ -45,24 +47,27 @@ h1 {
 }
 
 select, input {
-    padding: 10px;
-    margin: 8px;
-    border-radius: 8px;
+    padding: 12px;
+    margin: 8px 0;
+    border-radius: 10px;
     border: none;
-    font-size: 15px;
+    font-size: 16px;
+    width: 100%;
+    box-sizing: border-box;
 }
 
 button {
-    padding: 10px 18px;
-    margin: 8px;
-    border-radius: 8px;
+    padding: 14px;
+    margin: 8px 0;
+    border-radius: 10px;
     border: none;
-    font-size: 15px;
+    font-size: 16px;
     cursor: pointer;
     background: var(--neon);
     color: white;
     box-shadow: 0 0 10px var(--neon);
     transition: 0.3s;
+    width: 100%;
 }
 
 button:hover {
