--- a/index.html
+++ b/index.html
@@ -277,7 +277,6 @@
 
         displayScores();
 
-        // ADVANCED NEON PARTICLES
         const canvas = document.getElementById("particles");
         const ctx = canvas.getContext("2d");
 
@@ -285,15 +284,22 @@
         canvas.height = window.innerHeight;
 
         let particles = [];
-        const particleCount = 80;
+        let particleCount;
+
+        // Reduce particles on mobile
+        if (window.innerWidth < 600) {
+            particleCount = 25;
+        } else {
+            particleCount = 50;
+        }
 
         class Particle {
             constructor() {
                 this.x = Math.random() * canvas.width;
                 this.y = Math.random() * canvas.height;
-                this.size = Math.random() * 3 + 1;
-                this.speedX = (Math.random() - 0.5) * 1.2;
-                this.speedY = (Math.random() - 0.5) * 1.2;
+                this.size = Math.random() * 2 + 1;
+                this.speedX = (Math.random() - 0.5) * 0.8;
+                this.speedY = (Math.random() - 0.5) * 0.8;
             }
 
             update() {
@@ -306,8 +312,6 @@
 
             draw() {
                 ctx.fillStyle = "#bb00ff";
-                ctx.shadowBlur = 15;
-                ctx.shadowColor = "#bb00ff";
                 ctx.beginPath();
                 ctx.arc(this.x, this.y, this.size, 0, Math.PI * 2);
                 ctx.fill();
@@ -321,25 +325,6 @@
             }
         }
 
-        function connectParticles() {
-            for (let a = 0; a < particles.length; a++) {
-                for (let b = a; b < particles.length; b++) {
-                    let dx = particles[a].x - particles[b].x;
-                    let dy = particles[a].y - particles[b].y;
-                    let distance = Math.sqrt(dx * dx + dy * dy);
-
-                    if (distance < 100) {
-                        ctx.strokeStyle = "rgba(187,0,255,0.2)";
-                        ctx.lineWidth = 1;
-                        ctx.beginPath();
-                        ctx.moveTo(particles[a].x, particles[a].y);
-                        ctx.lineTo(particles[b].x, particles[b].y);
-                        ctx.stroke();
-                    }
-                }
-            }
-        }
-
         function animate() {
             ctx.clearRect(0, 0, canvas.width, canvas.height);
 
@@ -348,7 +333,6 @@
                 p.draw();
             });
 
-            connectParticles();
             requestAnimationFrame(animate);
         }
 
